--- a/src/domain/child/modal/childFormModal.module.scss
+++ b/src/domain/child/modal/childFormModal.module.scss
@@ -33,12 +33,18 @@
   }
   .submitButton {
     @include button();
+    @include respond-below(sm) {
+      grid-row: 1/2;
+    }
   }
 
   .cancelButton {
     @include button();
     button {
       background: $hel-light;
+    }
+    @include respond-below(sm) {
+      grid-row: 2/2;
     }
   }
 
